complete Test Events Service Test Component Details Add qcm to Test edit, Add new Test, Delete test

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,6 +81,8 @@
         "theme":"Total Theme:",
         "question": "Total Question:",
         "qcm": "Total Qcm:",
+        "test": "Total Test",
+        "user": "User",
         "submit": "View"
     }
 
