--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -81,6 +81,8 @@
         "theme":"Themes Totals :",
         "question": "Questions Totales :",
         "qcm": "Total Qcm:",
+        "test": "Total Test",
+        "user": "Utilisateur",
         "submit": "Voir"
     }
 }
